--- a/MalibuComics/MalibuComics.html
+++ b/MalibuComics/MalibuComics.html
@@ -31,6 +31,12 @@
 <div class="mySlides" style="text-align: center;"><img src="Malibu11.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Malibu12.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Malibu13.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Malibu14.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Malibu15.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Malibu16.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Malibu17.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Malibu18.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Malibu19.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -52,92 +58,18 @@ Titles
 <li><a href="Malibu5.jpg">All New Exiles</a> (1992)
 <li><a href="Malibu6.jpg">Ape Nation</a> (1991)
 <li><a href="Malibu7.jpg">Arrow</a> (1992)
-<li><a href="Malibu8.jpg">Bodyguard</a> (1990)
-<li><a href="Malibu9.jpg">Break-Thru</a> (1993)
-<li><a href="Malibu10.jpg">Breed</a> (1994)
-<li><a href="Malibu11.jpg">Bruce Lee</a> (1994)
-<li><a href="Malibu12.jpg">Captain Harlock</a> (1989)
-<li>Cat &amp; Mouse
-<li>Cat Claw
-<li>Codename: Firearm
-<li>Dead Clown
-<li>Demonic Toys
-<li>Demon's Tails
-<li>Dinosaurs For Hire
-<li>Dollman
-<li>Dreadstar
-<li>Edge
-<li>Eliminator
-<li>Elven
-<li>Exiles
-<li>Ex-Mutants
-<li>Ferret
-<li>Firearm
-<li>Freex
-<li>Full Throttle 
-<li>Genesis
-<li>Gravestone
-<li>Hardcase
-<li>Lord Pumpkin
-<li>Lord Pumpkin/Necro-Mantra
-<li>Malibu Sun
-<li>Man Called A-X
-<li>Man of War
-<li>Mantra
-<li><a href="Malibu13.jpg">Men in Black</a> (1990)
-<li>Men In Black: Far Cry
-<li>Metaphysique by Norm Breyfogle
-<li>Miss Fury
-<li>Mortal Kombat
-<li>New Humans
-<li>Night Man
-<li>Ninja High School (1988)
-<li>Nocturnals
-<li>Paranoia 
-<li>Plan 9 from Outer Space
-<li>Planet of the Apes
-<li>Power &amp; Glory 
-<li>Prime
-<li>Project A-ko
-<li>Protectors
-<li>Protectors Handbook
-<li>Prototype
-<li>Puppet Master
-<li>Raver 
-<li>Ripfire 
-<li>Robotech
-<li>Rocket Ranger
-<li>Rune
-<li>Shattered Earth
-<li>Shuriken
-<li>Silver Storm
-<li>Siren
-<li>Sludge
-<li>Solitaire
-<li>Solution
-<li>Southern Squadron
-<li>Star Blazers
-<li>Star Slammers
-<li>Star Trek: Deep Space Nine
-<li>Star Trek: The Next Generation
-<li>Strangers
-<li>Street Fighter
-<li>Strikeback 
-<li>Subspecies
-<li>Tarzan the Beckoning
-<li>Tarzan the Warrior 
-<li>Tarzan: Love, Lies, and the Lost City
-<li>Terminator: Cybernetic Dawn
-<li>Terminator: Nuclear Twilight
-<li>Trancers
-<li>Ultraforce
-<li>Ultraverse Origins
-<li>Ultraverse Premiere
-<li>Warstrike
-<li>Wild Knights
-<li>Wrath
-<li>Year Zero: The Death of the Squad
-
+<li><a href="Malibu8.jpg">Break-Thru</a> (1993)
+<li><a href="Malibu9.jpg">Breed</a> (1994)
+<li><a href="Malibu10.jpg">Bruce Lee</a> (1994)
+<li><a href="Malibu11.jpg">Bravura</a> (1995)
+<li><a href="Malibu12.jpg">Dreadstar</a> (1994)
+<li><a href="Malibu13.jpg">Edge</a> (1994)
+<li><a href="Malibu14.jpg">Man Called A-X</a> (1994)
+<li><a href="Malibu15.jpg">Metaphysique</a> (1995)
+<li><a href="Malibu16.jpg">Nocturnals</a> (1995)
+<li><a href="Malibu17.jpg">Power &amp; Glory</a> (1994)
+<li><a href="Malibu18.jpg">Star Slammers</a> (1994)
+<li><a href="Malibu19.jpg">Strikeback!</a> (1994)
 </p>
 
 </body>
