--- a/index.html
+++ b/index.html
@@ -1203,6 +1203,13 @@
 
 <tr>
 <td>Abraham Stone</td>
+<td>1991</td>
+<td>Malibu</td>
+<td><a href="MalibuComics/MalibuComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Abraham Stone</td>
 <td>1995</td>
 <td>Epic</td>
 <td><a href="AbrahamStone/AbrahamStone.html">Details</a></td>
@@ -2090,6 +2097,13 @@
 </tr>
 
 <tr>
+<td>Airman</td>
+<td>1993</td>
+<td>Malibu</td>
+<td><a href="MalibuComics/MalibuComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Airship Enterprise</td>
 <td>2017</td>
 <td>Antarctic Press</td>
@@ -2467,6 +2481,13 @@
 <td>1983</td>
 <td>Epic</td>
 <td><a href="AlienLegion/alienlegion.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Alien Nation</td>
+<td>1990</td>
+<td>Malibu</td>
+<td><a href="MalibuComics/MalibuComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -2901,6 +2922,13 @@
 <td>2014</td>
 <td>Marvel</td>
 <td><a href="AllNewDoop/Doop.html">Details</a></td>
+</tr>
+
+<tr>
+<td>All New Exiles</td>
+<td>1992</td>
+<td>Malibu</td>
+<td><a href="MalibuComics/MalibuComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -4311,6 +4339,13 @@
 </tr>
 
 <tr>
+<td>Ape Nation</td>
+<td>1991</td>
+<td>Malibu</td>
+<td><a href="MalibuComics/MalibuComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Apex Novelties</td>
 <td>1968</td>
 <td>Publisher</td>
@@ -4560,6 +4595,13 @@
 <td>1974</td>
 <td>Marvel</td>
 <td><a href="Arrgh/Arrgh.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Arrow</td>
+<td>1992</td>
+<td>Malibu</td>
+<td><a href="MalibuComics/MalibuComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -8425,10 +8467,31 @@
 </tr>
 
 <tr>
+<td>Bravura</td>
+<td>1995</td>
+<td>Malibu</td>
+<td><a href="MalibuComics/MalibuComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Brawl</td>
 <td>2007</td>
 <td>Image</td>
 <td><a href="Image/image.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Break-Thru</td>
+<td>1993</td>
+<td>Malibu</td>
+<td><a href="MalibuComics/MalibuComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Breed</td>
+<td>1994</td>
+<td>Malibu</td>
+<td><a href="MalibuComics/MalibuComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -8639,6 +8702,13 @@
 <td>1993</td>
 <td>Innovation</td>
 <td><a href="Innovation/Innovation.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Bruce Lee</td>
+<td>1994</td>
+<td>Malibu</td>
+<td><a href="MalibuComics/MalibuComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -14926,6 +14996,13 @@
 </tr>
 
 <tr>
+<td>Dreadstar</td>
+<td>1994</td>
+<td>Malibu</td>
+<td><a href="MalibuComics/MalibuComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Dream Logic</td>
 <td>2010</td>
 <td>Icon</td>
@@ -15441,6 +15518,13 @@
 <td>1997</td>
 <td>Dark Horse</td>
 <td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Edge</td>
+<td>1994</td>
+<td>Malibu</td>
+<td><a href="MalibuComics/MalibuComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -26510,6 +26594,13 @@
 </tr>
 
 <tr>
+<td>Man Called A-X</td>
+<td>1994</td>
+<td>Malibu</td>
+<td><a href="MalibuComics/MalibuComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Man From Atlantis</td>
 <td>1977</td>
 <td>NBC</td>
@@ -27885,6 +27976,13 @@
 <td>1992</td>
 <td>Eclipse</td>
 <td><a href="Eclipse/Eclipse.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Metaphysique</td>
+<td>1995</td>
+<td>Malibu</td>
+<td><a href="MalibuComics/MalibuComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -30395,6 +30493,13 @@
 </tr>
 
 <tr>
+<td>Nocturnals</td>
+<td>1995</td>
+<td>Malibu</td>
+<td><a href="MalibuComics/MalibuComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Nocturnals: Witching Hour</td>
 <td>1998</td>
 <td>Dark Horse</td>
@@ -32307,6 +32412,13 @@
 <td>1991</td>
 <td>Aircel</td>
 <td><a href="Aircel/Aircel.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Power &amp; Glory</td>
+<td>1994</td>
+<td>Malibu</td>
+<td><a href="MalibuComics/MalibuComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -37479,6 +37591,13 @@
 
 <tr>
 <td>Star Slammers</td>
+<td>1994</td>
+<td>Malibu</td>
+<td><a href="MalibuComics/MalibuComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Star Slammers</td>
 <td>2014</td>
 <td>IDW</td>
 <td><a href="IDW/IDW.html">Details</a></td>
@@ -38140,6 +38259,13 @@
 <td>1993</td>
 <td>Comico</td>
 <td><a href="Comico/Comico.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Strikeback!</td>
+<td>1994</td>
+<td>Malibu</td>
+<td><a href="MalibuComics/MalibuComics.html">Details</a></td>
 </tr>
 
 <tr>
