--- a/EternityComics/EternityComics.html
+++ b/EternityComics/EternityComics.html
@@ -18,7 +18,8 @@
 <span class="close cursor" onclick="closeModal()">&times;</span>
 <div class="modal-content">
 
-<div class="mySlides" style="text-align: center;"><img src=""></div>
+<div class="mySlides" style="text-align: center;"><img src="EternityComics1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="EternityComics2.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
