--- a/Eclipse/Eclipse.html
+++ b/Eclipse/Eclipse.html
@@ -87,13 +87,13 @@ Eclipse Titles
 <li><a href="Eclipse3.jpg">3-D Laser Eraser and Pressbutton</a> (1986)
 <li><a href="Eclipse4.jpg">Aces</a> (1988)
 <li><a href="Eclipse5.jpg">Adolescent Radioactive Black Belt Hamsters</a> (1986)
+<li><a href="Eclipse6.jpg">Air Fighters Classics</a> (1987)
+<li><a href="Eclipse11.jpg">Air Fighters Meet Sgt. Strike Special</a> (1988)
 <li><a href="Eclipse7.jpg">Airboy</a> (1986)
 <li><a href="Eclipse8.jpg">Airboy Meets the Prowler</a> (1987)
 <li><a href="Eclipse10.jpg">Airboy - Mr. Monster Special</a> (1987)
 <li><a href="Eclipse9.jpg">Airboy versus the Airmaidens (1988)
-<li><a href="Eclipse6.jpg">Air Fighters Classics</a> (1987)
-<li><a href="Eclipse11.jpg">Airfighters Meet Sgt. Strike Special</a> (1988)
-<li><a href="Eclipse12.jpg">Airmaidens Special</a>
+<li><a href="Eclipse12.jpg">Airmaidens Special</a> (1987)
 <li><a href="../AlienEncounters/AlienEncounters.html">Alien Encounters</a> (1985)
 <li><a href="../AlienWorlds/AlienWorlds.html">Alien Worlds</a> (1984)
 <li><a href="Eclipse13.jpg">Allan W. Eckert's Tecumseh!</a> (1992)
