--- a/index.html
+++ b/index.html
@@ -2034,6 +2034,20 @@
 </tr>
 
 <tr>
+<td>Air Fighters Classics</td>
+<td>1987</a>
+<td>Eclipse
+<td><a href="Eclipse/Eclipse.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Air Fighters Meet Sgt. Strike Special</td>
+<td>1988</a>
+<td>Eclipse
+<td><a href="Eclipse/Eclipse.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Air Pirates Funnies</td>
 <td>1971</td>
 <td>Hell Comics</td>
@@ -2108,6 +2122,13 @@
 <td>1991</td>
 <td>Eclectus</td>
 <td><a href="Airlock/Airlock.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Airmaidens Special</td>
+<td>1987</a>
+<td>Eclipse
+<td><a href="Eclipse/Eclipse.html">Details</a></td>
 </tr>
 
 <tr>
@@ -2575,6 +2596,13 @@
 </tr>
 
 <tr>
+<td>Alien Worlds</td>
+<td>1984</a>
+<td>Eclipse
+<td><a href="Eclipse/Eclipse.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Aliens</td>
 <td>1967</td>
 <td>Gold Key</td>
@@ -2869,13 +2897,6 @@
 </tr>
 
 <tr>
-<td>Adventures Of Venus</td>
-<td>2012</td>
-<td>Fantagraphics</td>
-<td><a href="Fantagraphics/Fantagraphics.html">Details</a></td>
-</tr>
-
-<tr>
 <td>All American</td>
 <td>1939</td>
 <td>DC</td>
@@ -3163,6 +3184,13 @@
 </tr>
 
 <tr>
+<td>Allan W. Eckert's Tecumseh!</td>
+<td>1992</a>
+<td>Eclipse
+<td><a href="Eclipse/Eclipse.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Allegiance Arts &amp; Entertainment</td>
 <td>2020</td>
 <td>Publisher</td>
@@ -3384,6 +3412,13 @@
 <td>1944</td>
 <td>Timely</td>
 <td><a href="AmazingComics/AmazingComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Amazing Cynicalman</td>
+<td>1987</a>
+<td>Eclipse
+<td><a href="Eclipse/Eclipse.html">Details</a></td>
 </tr>
 
 <tr>
@@ -4430,6 +4465,13 @@
 </tr>
 
 <tr>
+<td>Appleseed</td>
+<td>1988</a>
+<td>Eclipse
+<td><a href="Eclipse/Eclipse.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Appleseed Databook</td>
 <td>1995</td>
 <td>Dark Horse</td>
@@ -4528,6 +4570,13 @@
 </tr>
 
 <tr>
+<td>Area 88</td>
+<td>1987</a>
+<td>Eclipse
+<td><a href="Eclipse/Eclipse.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Areala: Angel Of War</td>
 <td>1998</td>
 <td>Antarctic Press</td>
@@ -4553,6 +4602,13 @@
 <td>1999</td>
 <td>Image</td>
 <td><a href="Image/image.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Ariane &amp; Bluebeard</td>
+<td>1989</a>
+<td>Eclipse
+<td><a href="Eclipse/Eclipse.html">Details</a></td>
 </tr>
 
 <tr>
@@ -5424,6 +5480,13 @@
 </tr>
 
 <tr>
+<td>Axa</td>
+<td>1981</a>
+<td>Eclipse
+<td><a href="Eclipse/Eclipse.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Axcend</td>
 <td>1995</td>
 <td>Image</td>
@@ -5438,6 +5501,13 @@
 </tr>
 
 <tr>
+<td>Axel Pressbutton</td>
+<td>1984</a>
+<td>Eclipse
+<td><a href="Eclipse/Eclipse.html">Details</a></td>
+</tr>
+
+<tr>
 <td>AYA</td>
 <td>2007</td>
 <td>Drawn &amp; Quarterly</td>
@@ -5449,6 +5519,13 @@
 <td>1983</td>
 <td>Comico</td>
 <td><a href="Az/Az.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Aztec Ace</td>
+<td>1984</a>
+<td>Eclipse
+<td><a href="Eclipse/Eclipse.html">Details</a></td>
 </tr>
 
 <tr>
@@ -5512,6 +5589,13 @@
 <td>1949</td>
 <td>Avon</td>
 <td><a href="Avon/Avon.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Back Down The Line</td>
+<td>1991</a>
+<td>Eclipse
+<td><a href="Eclipse/Eclipse.html">Details</a></td>
 </tr>
 
 <tr>
@@ -6026,6 +6110,13 @@
 </tr>
 
 <tr>
+<td>Batman &amp; Me</td>
+<td>1989</a>
+<td>Eclipse
+<td><a href="Eclipse/Eclipse.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Batman And Daredevil</td>
 <td>2004</td>
 <td>DC/Marvel</td>
@@ -6398,6 +6489,13 @@
 
 <tr>
 <td>Bedlam</td>
+<td>1985</a>
+<td>Eclipse
+<td><a href="Eclipse/Eclipse.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Bedlam</td>
 <td>2012</td>
 <td>Image</td>
 <td><a href="Bedlam/Bedlam.html">Details</a></td>
@@ -6592,7 +6690,14 @@
 </tr>
 
 <tr>
-<td>Bernie Wrightson's Frankenstein</td>
+<td>Berni Wrightson: Master Of The Macabre </td>
+<td>1984</a>
+<td>Eclipse
+<td><a href="Eclipse/Eclipse.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Berni Wrightson's Frankenstein</td>
 <td>1983</td>
 <td>Dark Horse</td>
 <td><a href="BerniWrightsonFrankenstein/BerniWrightsonFrankenstein.html">Details</a></td>
@@ -7439,6 +7544,13 @@
 </tr>
 
 <tr>
+<td>Black Magic</td>
+<td>1990</a>
+<td>Eclipse
+<td><a href="Eclipse/Eclipse.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Black Magick</td>
 <td>2015</td>
 <td>Image</td>
@@ -7527,6 +7639,13 @@
 <td>1943</td>
 <td>Nedor</td>
 <td><a href="BlackTerror/BlackTerror.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Black Terror</td>
+<td>1989</a>
+<td>Eclipse
+<td><a href="Eclipse/Eclipse.html">Details</a></td>
 </tr>
 
 <tr>
@@ -7677,6 +7796,13 @@
 </tr>
 
 <tr>
+<td>Blandman</td>
+<td>1992</a>
+<td>Eclipse
+<td><a href="Eclipse/Eclipse.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Blankets</td>
 <td>2003</td>
 <td>Top Shelf</td>
@@ -7807,6 +7933,13 @@
 <td>1992</td>
 <td>Kitchen Sink</td>
 <td><a href="KitchenSinkPress/KitchenSinkPress.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Blood Is The Harvest</td>
+<td>1992</a>
+<td>Eclipse
+<td><a href="Eclipse/Eclipse.html">Details</a></td>
 </tr>
 
 <tr>
@@ -8075,6 +8208,13 @@
 </tr>
 
 <tr>
+<td>Bob Powell's Timeless Tales</td>
+<td>1989</a>
+<td>Eclipse
+<td><a href="Eclipse/Eclipse.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Bobby Sherman</td>
 <td>1972</td>
 <td>Charlton</td>
@@ -8128,6 +8268,13 @@
 <td>1969</td>
 <td>SFCC</td>
 <td><a href="RoryHayes/RoryHayes.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Bogie</td>
+<td>1989</a>
+<td>Eclipse
+<td><a href="Eclipse/Eclipse.html">Details</a></td>
 </tr>
 
 <tr>
@@ -8345,6 +8492,13 @@
 <td>1941</td>
 <td>Creator</td>
 <td><a href="BorisVallejo/BorisVallejo.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Born To Be Wild</td>
+<td>1991</a>
+<td>Eclipse
+<td><a href="Eclipse/Eclipse.html">Details</a></td>
 </tr>
 
 <tr>
@@ -8719,6 +8873,13 @@
 </tr>
 
 <tr>
+<td>Brought To Light</td>
+<td>1989</a>
+<td>Eclipse
+<td><a href="Eclipse/Eclipse.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Bruce Jones</td>
 <td>1946</td>
 <td>Creator</td>
@@ -8866,6 +9027,13 @@
 </tr>
 
 <tr>
+<td>Bullet Crow, Fowl Of Fortune</td>
+<td>1987</a>
+<td>Eclipse
+<td><a href="Eclipse/Eclipse.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Bullet Points</td>
 <td>2007</td>
 <td>Marvel</td>
@@ -8996,6 +9164,13 @@
 <td>1902</td>
 <td>New York Herald</td>
 <td><a href="BusterBrown/BusterBrown.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Buster Keaton</td>
+<td>1982</a>
+<td>Eclipse
+<td><a href="Eclipse/Eclipse.html">Details</a></td>
 </tr>
 
 <tr>
@@ -9132,6 +9307,13 @@
 </tr>
 
 <tr>
+<td>California Girls</td>
+<td>1987</a>
+<td>Eclipse
+<td><a href="Eclipse/Eclipse.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Call Of Duty</td>
 <td>2003</td>
 <td>Activision</td>
@@ -9258,6 +9440,13 @@
 </tr>
 
 <tr>
+<td>Cap'n Quick And A Foozle</td>
+<td>1984</a>
+<td>Eclipse
+<td><a href="Eclipse/Eclipse.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Capacity</td>
 <td>2008</td>
 <td>Secret Acres</td>
@@ -9360,6 +9549,13 @@
 <td>2010</td>
 <td>Fantagraphics</td>
 <td><a href="Fantagraphics/Fantagraphics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Captain EO 3-D</td>
+<td>1987</a>
+<td>Eclipse
+<td><a href="Eclipse/Eclipse.html">Details</a></td>
 </tr>
 
 <tr>
@@ -10011,6 +10207,13 @@
 <td>1995</td>
 <td>MU Press</td>
 <td><a href="MUPress/MUPress.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Champions</td>
+<td>1986</a>
+<td>Eclipse
+<td><a href="Eclipse/Eclipse.html">Details</a></td>
 </tr>
 
 <tr>
@@ -10761,6 +10964,13 @@
 </tr>
 
 <tr>
+<td>Clint</td>
+<td>1986</a>
+<td>Eclipse
+<td><a href="Eclipse/Eclipse.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Clive Barker's Book Of The Damned</td>
 <td>1991</td>
 <td>Epic</td>
@@ -10800,6 +11010,27 @@
 <td>2005</td>
 <td>IDW</td>
 <td><a href="IDW/IDW.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Clive Barker: Revelations</td>
+<td>1992</a>
+<td>Eclipse
+<td><a href="Eclipse/Eclipse.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Clive Barker: Son Of Celluloid</td>
+<td>1991</a>
+<td>Eclipse
+<td><a href="Eclipse/Eclipse.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Clive Barker: The Life Of Death</td>
+<td>1993</a>
+<td>Eclipse
+<td><a href="Eclipse/Eclipse.html">Details</a></td>
 </tr>
 
 <tr>
@@ -11201,6 +11432,13 @@
 </tr>
 
 <tr>
+<td>Comics Express</td>
+<td>1989</a>
+<td>Eclipse
+<td><a href="Eclipse/Eclipse.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Comics Greatest World</td>
 <td>1993</td>
 <td>Dark Horse</td>
@@ -11320,6 +11558,13 @@
 </tr>
 
 <tr>
+<td>Complete Alec</td>
+<td>1990</a>
+<td>Eclipse
+<td><a href="Eclipse/Eclipse.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Complete Carl Barks Disney Library</td>
 <td>2011</td>
 <td>Fantagraphics</td>
@@ -11380,6 +11625,13 @@
 <td>2004</td>
 <td>Fantagraphics</td>
 <td><a href="Fantagraphics/Fantagraphics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Complete Pogo Comics</td>
+<td>1989</a>
+<td>Eclipse
+<td><a href="Eclipse/Eclipse.html">Details</a></td>
 </tr>
 
 <tr>
@@ -11513,6 +11765,13 @@
 <td>1978</td>
 <td>Baronet Books</td>
 <td><a href="ContractWithGod/contractwithgod.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Contractors</td>
+<td>1987</a>
+<td>Eclipse
+<td><a href="Eclipse/Eclipse.html">Details</a></td>
 </tr>
 
 <tr>
@@ -12132,6 +12391,20 @@
 </tr>
 
 <tr>
+<td>Crossfire</td>
+<td>1984</a>
+<td>Eclipse
+<td><a href="Eclipse/Eclipse.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Crossfire &amp; Rainbow</td>
+<td>1986</a>
+<td>Eclipse
+<td><a href="Eclipse/Eclipse.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Crossing Midnight</td>
 <td>2006</td>
 <td>Vertigo</td>
@@ -12409,6 +12682,20 @@
 <td>1999</td>
 <td>Image</td>
 <td><a href="Image/image.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Cyber 7</td>
+<td>1989</a>
+<td>Eclipse
+<td><a href="Eclipse/Eclipse.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Cyber 7: Book Two</td>
+<td>1989</a>
+<td>Eclipse
+<td><a href="Eclipse/Eclipse.html">Details</a></td>
 </tr>
 
 <tr>
@@ -13120,6 +13407,13 @@
 </tr>
 
 <tr>
+<td>Daughters Of Fly In My Eye</td>
+<td>1990</a>
+<td>Eclipse
+<td><a href="Eclipse/Eclipse.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Dave Chappelle</td>
 <td>1973</td>
 <td>Creator</td>
@@ -13173,6 +13467,13 @@
 <td>1972</td>
 <td>Charlton</td>
 <td><a href="Charlton/Charlton.html">Details</a></td>
+</tr>
+
+<tr>
+<td>David Chelsea In Love</td>
+<td>1991</a>
+<td>Eclipse
+<td><a href="Eclipse/Eclipse.html">Details</a></td>
 </tr>
 
 <tr>
@@ -13904,6 +14205,13 @@
 </tr>
 
 <tr>
+<td>Destroy!!</td>
+<td>1986</a>
+<td>Eclipse
+<td><a href="Eclipse/Eclipse.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Destroyer</td>
 <td>2009</td>
 <td>Marvel</td>
@@ -13936,6 +14244,20 @@
 <td>1936</td>
 <td>Comics Magazine</td>
 <td><a href="DetectivePictureStories/DetectivePictureStories.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Detectives, Inc</td>
+<td>1985</a>
+<td>Eclipse
+<td><a href="Eclipse/Eclipse.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Detectives, Inc: A Terror Of Dying Dreams</td>
+<td>1985</a>
+<td>Eclipse
+<td><a href="Eclipse/Eclipse.html">Details</a></td>
 </tr>
 
 <tr>
@@ -14136,6 +14458,13 @@
 
 <tr>
 <td>Dinosaurs Attack!</td>
+<td>1991</a>
+<td>Eclipse
+<td><a href="Eclipse/Eclipse.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Dinosaurs Attack!</td>
 <td>2013</td>
 <td>IDW</td>
 <td><a href="IDW/IDW.html">Details</a></td>
@@ -14146,6 +14475,13 @@
 <td>2006</td>
 <td>Antarctic Press</td>
 <td><a href="AntarcticPress/AntarcticPress.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Directory To A Non-Existent Universe</td>
+<td>1987</a>
+<td>Eclipse
+<td><a href="Eclipse/Eclipse.html">Details</a></td>
 </tr>
 
 <tr>
@@ -14160,6 +14496,13 @@
 <td>1974</td>
 <td>Last Gasp</td>
 <td><a href="LastGasp/LastGasp.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Dirty Pair</td>
+<td>1988</a>
+<td>Eclipse
+<td><a href="Eclipse/Eclipse.html">Details</a></td>
 </tr>
 
 <tr>
@@ -14181,6 +14524,13 @@
 <td>1983</td>
 <td>Random House</td>
 <td><a href="Discworld/Discworld.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Dishman</td>
+<td>1988</a>
+<td>Eclipse
+<td><a href="Eclipse/Eclipse.html">Details</a></td>
 </tr>
 
 <tr>
@@ -14286,6 +14636,13 @@
 <td>2006</td>
 <td>Vertigo</td>
 <td><a href="DMZ/DMZ.html">Details</a></td>
+</tr>
+
+<tr>
+<td>DNAgents</td>
+<td>1983</a>
+<td>Eclipse
+<td><a href="Eclipse/Eclipse.html">Details</a></td>
 </tr>
 
 <tr>
@@ -14503,6 +14860,13 @@
 <td>2007</td>
 <td>IDW</td>
 <td><a href="IDW/IDW.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Dominion</td>
+<td>1989</a>
+<td>Eclipse
+<td><a href="Eclipse/Eclipse.html">Details</a></td>
 </tr>
 
 <tr>
@@ -14765,6 +15129,13 @@
 </tr>
 
 <tr>
+<td>Downside</td>
+<td>1993</a>
+<td>Eclipse
+<td><a href="Eclipse/Eclipse.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Downtime</td>
 <td>1989</td>
 <td>4 Winds</td>
@@ -14835,6 +15206,13 @@
 </tr>
 
 <tr>
+<td>Dr. Watchstop</td>
+<td>1989</a>
+<td>Eclipse
+<td><a href="Eclipse/Eclipse.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Dracula</td>
 <td>1897</td>
 <td>Archibald Constable</td>
@@ -14891,17 +15269,24 @@
 </tr>
 
 <tr>
-<td>Dragon Lines</td>
-<td>1993</td>
-<td>Epic</td>
-<td><a href="DragonLines/DragonLines.html">Details</a></td>
-</tr>
-
-<tr>
 <td>Dragon Arms</td>
 <td>1994</td>
 <td>Antarctic Press</td>
 <td><a href="AntarcticPress/AntarcticPress.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Dragon Chiang</td>
+<td>1991</a>
+<td>Eclipse
+<td><a href="Eclipse/Eclipse.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Dragon Lines</td>
+<td>1993</td>
+<td>Epic</td>
+<td><a href="DragonLines/DragonLines.html">Details</a></td>
 </tr>
 
 <tr>
@@ -14930,6 +15315,13 @@
 <td>1984</td>
 <td>Bird Studio</td>
 <td><a href="Dragonball/Dragonball.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Dragonflight</td>
+<td>1991</a>
+<td>Eclipse
+<td><a href="Eclipse/Eclipse.html">Details</a></td>
 </tr>
 
 <tr>
@@ -15017,6 +15409,13 @@
 </tr>
 
 <tr>
+<td>Dread</td>
+<td>1992</a>
+<td>Eclipse
+<td><a href="Eclipse/Eclipse.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Dreadlands</td>
 <td>1992</td>
 <td>Epic</td>
@@ -15063,6 +15462,13 @@
 <td>2008</td>
 <td>IDW</td>
 <td><a href="IDW/IDW.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Dreamery</td>
+<td>1986</a>
+<td>Eclipse
+<td><a href="Eclipse/Eclipse.html">Details</a></td>
 </tr>
 
 <tr>
@@ -19437,6 +19843,13 @@
 <td>2007</td>
 <td>Vertigo</td>
 <td><a href="GodSaveTheQueen/GodSaveTheQueen.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Goddess, Untold Tales Of Zolastraya</td>
+<td>1989</td>
+<td>Twilight Twins</td>
+<td><a href="TwilightTwins/TwilightTwins.html">Details</a></td>
 </tr>
 
 <tr>
@@ -35715,6 +36128,13 @@
 </tr>
 
 <tr>
+<td>Secretum Secretorum</td>
+<td>1995</td>
+<td>Twilight Twins</td>
+<td><a href="TwilightTwins/TwilightTwins.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Sectaurs</td>
 <td>1985</td>
 <td>Marvel</td>
@@ -38318,6 +38738,13 @@
 </tr>
 
 <tr>
+<td>Stray Cats</td>
+<td>1991</td>
+<td>Twilight Twins</td>
+<td><a href="TwilightTwins/TwilightTwins.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Stray Toasters</td>
 <td>1988</td>
 <td>Marvel</td>
@@ -40355,7 +40782,7 @@
 </tr>
 
 <tr>
-<td>Turok, Sone Of Stone</td>
+<td>Turok, Son Of Stone</td>
 <td>1962</td>
 <td>Gold Key</td>
 <td><a href="GoldKey/GoldKey.html">Details</a></td>
@@ -40373,6 +40800,13 @@
 <td>1989</td>
 <td>First Comics</td>
 <td><a href="FirstComics/FirstComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Twilight Twins</td>
+<td>1987</td>
+<td>Publisher</td>
+<td><a href="TwilightTwins/TwilightTwins.html">Details</a></td>
 </tr>
 
 <tr>
@@ -43712,6 +44146,13 @@
 <td>1971</td>
 <td>King Features</td>
 <td><a href="ZippyThePinhead/ZippyThePinhead.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Zolastraya And The Bard</td>
+<td>1987</td>
+<td>Twilight Twins</td>
+<td><a href="TwilightTwins/TwilightTwins.html">Details</a></td>
 </tr>
 
 <tr>
