--- a/MarvelTeamUp/MarvelTeamUp.html
+++ b/MarvelTeamUp/MarvelTeamUp.html
@@ -7,8 +7,7 @@
 <title> Marvel Team-Up </title>
 </head>
 <body>
-<img src="MarvelTeamUp1972series001.jpg"> <br>
-Publisher: Marvel<br>
+<img src="MarvelTeamUp1972series001.jpg">
 <p>
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
@@ -23,18 +22,25 @@ Publisher: Marvel<br>
 <div class="mySlides" style="text-align: center;"><img src="MarvelTeamUp1972series003.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="MarvelTeamUp1972series004.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="MarvelTeamUp1972series005.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MarvelTeamUp1972series006.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
 </p><p>
-Series:<br>
 Marvel Team-Up Volume 1 #1–150 (1972–1985)<br>
-Marvel Team-Up Annual #1-7 (1976)<br>
 Marvel Team-Up Volume 2 #1–11 (1997–1998)<br>
 Marvel Team-Up Volume 3 #1–25 (2005-2006)<br>
+Marvel Team-Up Annual #1-7 (1976)
+</p><p>
+Marvel Team-Up is an American comic book series published by Marvel Comics. The series featured two or more Marvel characters in one story. The series was originally published from March 1972 through February 1985, and featured Spider-Man as the lead "team-up" character in all but ten of its 150 issues, and in six of its seven Annuals. It was the first major ongoing spin-off series for Spider-Man, being preceded only by the short-lived The Spectacular Spider-Man magazine. 
+</p><p>
+Of the issues that did not star Spider-Man, the Human Torch headlines six issues (#18, 23, 26, 29, 32, 35); the Hulk, four (#97, 104, 105, and Annual #3); and Aunt May, one (#137). Publication of most of the issues starring the Human Torch coincided with that of Giant-Size Spider-Man, an alternate Spider-Man "team-up"-themed series by the regular Marvel Team-Up creative team. When cancelled with #150 in 1985, the title was replaced by Web of Spider-Man.
+</p><p>
+The second series was published for 11 issues from September 1997 through July 1998 and originally featured Spider-Man; Namor the Sub-Mariner was the featured character starting with #8. From 1995 to 1997, a quarterly series titled Spider-Man Team-Up fulfilled much the same purpose as the original title. The third Marvel Team-Up series, written by Robert Kirkman, began publication in January 2005 and frequently featured Spider-Man. This volume often reintroduced lesser-known Marvel characters that had fallen into obscurity. 
+</p><p>
+1972 Series, issue #1: Spider-Man and the Human Torch battle the Sandman in "Have Yourself a Sandman Little Christmas!" Script by Roy Thomas, pencils by Ross Andru, inks by Mike Esposito. Cameos by the rest of the Fantastic Four. Gil Kane/Frank Giacoia cover.
 </p>
 
-1972 Series, issue #1: Spider-Man and the Human Torch battle the Sandman in "Have Yourself a Sandman Little Christmas!" Script by Roy Thomas, pencils by Ross Andru, inks by Mike Esposito. Cameos by the rest of the Fantastic Four. Gil Kane/Frank Giacoia cover.
 </body>
 </html>
