--- a/index.html
+++ b/index.html
@@ -1782,6 +1782,13 @@
 </tr>
 
 <tr>
+<td>Adventures Of Simone &amp; Ajax</td>
+<td>1998</td>
+<td>Arrow</td>
+<td><a href="ArrowComics/ArrowComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Adventures Of Snake Plissken</td>
 <td>1997</td>
 <td>Marvel</td>
@@ -4683,9 +4690,23 @@
 
 <tr>
 <td>Arrow</td>
+<td>1985</td>
+<td>Publisher</td>
+<td><a href="ArrowComics/ArrowComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Arrow</td>
 <td>1992</td>
 <td>Malibu</td>
 <td><a href="MalibuComics/MalibuComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Arrow Anthology</td>
+<td>1998</td>
+<td>Arrow</td>
+<td><a href="ArrowComics/ArrowComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -5274,6 +5295,13 @@
 <td>1963</td>
 <td>Gold Key</td>
 <td><a href="GoldKey/GoldKey.html">Details</a></td>
+</tr>
+
+<tr>
+<td>August</td>
+<td>1998</td>
+<td>Arrow</td>
+<td><a href="ArrowComics/ArrowComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -7100,6 +7128,13 @@
 <td>1982</td>
 <td>AC Comics</td>
 <td><a href="ACComics/ACComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Bill Bryan's Oz Collection</td>
+<td>1998</td>
+<td>Arrow</td>
+<td><a href="ArrowComics/ArrowComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -9188,6 +9223,13 @@
 </tr>
 
 <tr>
+<td>Butterfly Gunn</td>
+<td>2000</td>
+<td>Arrow</td>
+<td><a href="ArrowComics/ArrowComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Buz Swayer</td>
 <td>2011</td>
 <td>Fantagraphics</td>
@@ -9339,6 +9381,13 @@
 <td>1985</td>
 <td>DC</td>
 <td><a href="Camelot3000/Camelot3000.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Camelot's Last Knight</td>
+<td>2001</td>
+<td>Arrow</td>
+<td><a href="ArrowComics/ArrowComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -13253,6 +13302,13 @@
 </tr>
 
 <tr>
+<td>Dark Oz</td>
+<td>1997</td>
+<td>Arrow</td>
+<td><a href="ArrowComics/ArrowComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Dark Rain: A New Orleans Story</td>
 <td>2010</td>
 <td>Vertigo</td>
@@ -13586,6 +13642,13 @@
 <td>2004</td>
 <td>DC</td>
 <td><a href="DCNewFrontier/DCNewFrontier.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Dead</td>
+<td>1993</td>
+<td>Arrow</td>
+<td><a href="ArrowComics/ArrowComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -14156,10 +14219,17 @@
 </tr>
 
 <tr>
-<td>Desendants</td>
+<td>Descendants</td>
 <td>2019</td>
 <td>IDW</td>
 <td><a href="IDW/IDW.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Descendants Of Toshin</td>
+<td>1999</td>
+<td>Arrow</td>
+<td><a href="ArrowComics/ArrowComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -14370,13 +14440,6 @@
 <td>2019</td>
 <td>IDW</td>
 <td><a href="IDW/IDW.html">Details</a></td>
-</tr>
-
-<tr>
-<td>Dicks</td>
-<td>1997</td>
-<td>Arrow</td>
-<td><a href="DeadWorld/DeadWorld.html">Details</a></td>
 </tr>
 
 <tr>
@@ -15168,6 +15231,13 @@
 <td>1992</td>
 <td>Dark Horse</td>
 <td><a href="DrGiggles/DrGiggles.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Dr. Goyle</td>
+<td>1999</td>
+<td>Arrow</td>
+<td><a href="ArrowComics/ArrowComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -17663,13 +17733,6 @@
 </tr>
 
 <tr>
-<td>Fire</td>
-<td>1993</td>
-<td>Arrow</td>
-<td><a href="DeadWorld/DeadWorld.html">Details</a></td>
-</tr>
-
-<tr>
 <td>Fire Man</td>
 <td>1997</td>
 <td>Image</td>
@@ -18481,13 +18544,6 @@
 </tr>
 
 <tr>
-<td>Fringe</td>
-<td>1990</td>
-<td>Arrow</td>
-<td><a href="DeadWorld/DeadWorld.html">Details</a></td>
-</tr>
-
-<tr>
 <td>Frisky Animals On Parade</td>
 <td>1957</td>
 <td>Farrell</td>
@@ -18569,13 +18625,6 @@
 <td>1951</td>
 <td>EC</td>
 <td><a href="FrontlineCombat/FrontlineCombat.html">Details</a> </td>
-</tr>
-
-<tr>
-<td>Frost</td>
-<td>1990</td>
-<td>Arrow</td>
-<td><a href="DeadWorld/DeadWorld.html">Details</a></td>
 </tr>
 
 <tr>
@@ -25103,6 +25152,13 @@
 </tr>
 
 <tr>
+<td>Korvus</td>
+<td>1998</td>
+<td>Arrow</td>
+<td><a href="ArrowComics/ArrowComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Kraven's Last Hunt</td>
 <td>1987</td>
 <td>Marvel</td>
@@ -25303,6 +25359,13 @@
 <td>1971</td>
 <td>Gold Key</td>
 <td><a href="GoldKey/GoldKey.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Land Of Oz</td>
+<td>1998</td>
+<td>Arrow</td>
+<td><a href="ArrowComics/ArrowComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -25621,10 +25684,17 @@
 </tr>
 
 <tr>
-<td>Legendlore</td>
+<td>Legend Lore</td>
 <td>1996</td>
 <td>Caliber</td>
 <td><a href="CaliberComics/CaliberComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Legend Lore: Tales From The Realm</td>
+<td>1998</td>
+<td>Arrow</td>
+<td><a href="ArrowComics/ArrowComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -28945,6 +29015,13 @@
 </tr>
 
 <tr>
+<td>Miss Chevious: The Armageddon Project</td>
+<td>1999</td>
+<td>Arrow</td>
+<td><a href="ArrowComics/ArrowComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Miss Fury Comics</td>
 <td>1941</td>
 <td>Timely</td>
@@ -30910,6 +30987,13 @@
 <td>1992</td>
 <td>Marvel</td>
 <td><a href="Nightstalkers/Nightstalkers.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Nightstreets</td>
+<td>1986</td>
+<td>Arrow</td>
+<td><a href="ArrowComics/ArrowComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -33921,6 +34005,13 @@
 
 <tr>
 <td>Realm</td>
+<td>1986</td>
+<td>Arrow</td>
+<td><a href="ArrowComics/ArrowComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Realm</td>
 <td>1996</td>
 <td>Caliber</td>
 <td><a href="CaliberComics/CaliberComics.html">Details</a></td>
@@ -36191,6 +36282,13 @@
 </tr>
 
 <tr>
+<td>Semantic Lace</td>
+<td>2000</td>
+<td>Arrow</td>
+<td><a href="ArrowComics/ArrowComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Semper Fi</td>
 <td>1988</td>
 <td>Marvel</td>
@@ -37622,6 +37720,20 @@
 <td>1940</td>
 <td>Creator</td>
 <td><a href="SpainRodriguez/SpainRodriguez.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Spank The Monkey</td>
+<td>1999</td>
+<td>Arrow</td>
+<td><a href="ArrowComics/ArrowComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Spank The Monkey On The Comics Market</td>
+<td>2000</td>
+<td>Arrow</td>
+<td><a href="ArrowComics/ArrowComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -39312,6 +39424,13 @@
 </tr>
 
 <tr>
+<td>System Seven</td>
+<td>1987</td>
+<td>Arrow</td>
+<td><a href="ArrowComics/ArrowComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td><a name="t">Taarna</a></td>
 <td>2018</td>
 <td>HeavyMetal</td>
@@ -39358,6 +39477,13 @@
 <td>2005</td>
 <td>Fantagraphics</td>
 <td><a href="Fantagraphics/Fantagraphics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Tales From The Aniverse</td>
+<td>1985</td>
+<td>Arrow</td>
+<td><a href="ArrowComics/ArrowComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -42210,6 +42336,13 @@
 </tr>
 
 <tr>
+<td>War Of The Worlds: The Memphis Front</td>
+<td>1998</td>
+<td>Arrow</td>
+<td><a href="ArrowComics/ArrowComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Warcraft</td>
 <td>1994</td>
 <td>Blizzard</td>
@@ -43309,6 +43442,13 @@
 </tr>
 
 <tr>
+<td>Wogglebug</td>
+<td>1998</td>
+<td>Arrow</td>
+<td><a href="ArrowComics/ArrowComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Wolf And Red</td>
 <td>1995</td>
 <td>Dark Horse</td>
@@ -43390,6 +43530,13 @@
 <td>1992</td>
 <td>Innovation</td>
 <td><a href="Innovation/Innovation.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Wonderland</td>
+<td>1998</td>
+<td>Arrow</td>
+<td><a href="ArrowComics/ArrowComics.html">Details</a></td>
 </tr>
 
 <tr>
