--- a/ACG/ACG.html
+++ b/ACG/ACG.html
@@ -36,6 +36,7 @@
 <div class="mySlides" style="text-align: center;"><img src="ACG16.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="ACG17.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="ACG18.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../JamesOBarr/JamesOBarr.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="ACG19.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="ACG20.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="ACG21.jpg"></div>
@@ -82,6 +83,7 @@ Founded by Benjamin W. Sangor, ACG was co-owned by Fred Iger from 1948 to 1967. 
 <li><a href="ACG16.jpg">Milton Gross Funnies</a> (1947)
 <li><a href="ACG17.jpg">Moon Mullins</a> (1947)
 <li><a href="ACG18.jpg">Operation Peril</a> (1950)
+<li><a href="../JamesOBarr/JamesOBarr.html">Original Sins</a> (1999)
 <li><a href="../OutOfTheNight/OutOfTheNight.html">Out of the Night</a> (1952)
 <li><a href="ACG19.jpg">Romantic Adventures</a> (1949)
 <li><a href="ACG20.jpg">Search For Love</a> (1950)
