--- a/CaliberComics/CaliberComics.html
+++ b/CaliberComics/CaliberComics.html
@@ -90,6 +90,7 @@
 <div class="mySlides" style="text-align: center;"><img src="CaliberComics68.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="CaliberComics69.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="CaliberComics70.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="CaliberComics73.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -119,6 +120,7 @@ Titles
 <li><a href="CaliberComics13.jpg">The Crow</a> (1989)
 <li><a href="CaliberComics20.jpg">Daemonstorm</a> (1996)
 <li><a href="../DeadWorld/DeadWorld.html">Deadworld</a> (1989)
+<li><a href="CaliberComics73.jpg">Deadworld Archives</a> (2016)
 <li><a href="CaliberComics21.jpg">Dicks<a/> (1997)
 <li><a href="CaliberComics22.jpg">Fire</a> (1993)
 <li><a href="CaliberComics23.jpg">Fringe</a> (1990)
@@ -169,7 +171,7 @@ Titles
 <li><a href="CaliberComics67.jpg">U.N. Force</a> (1993)
 <li><a href="CaliberComics68.jpg">Untouchables</a> (1997)
 <li><a href="CaliberComics69.jpg">War of the Worlds</a> (1996)
-<li><a href="CaliberComics70.jpg">World of H.P. Lovecraft</a> (1993)
+<li><a href="CaliberComics70.jpg">Worlds of H.P. Lovecraft</a> (1993)
 </p>
 
 </body>
