--- a/IDW/IDW.html
+++ b/IDW/IDW.html
@@ -483,7 +483,8 @@ In 2016, IDW launched the Hasbro Reconstruction initiative to present a shared u
 <li><a href="IDW83.jpg">Complete Jon Sable: Freelance</a> (2005)
 <li><a href="IDW87.jpg">Cory Doctorow's Futuristic Tales of The Here and Now</a> (2007)
 <li><a href="IDW88.jpg">Crawl To Me</a> (2011)
-<li><a href="IDW89.jpg">Creativity Of Ditko</a> (2012) 
+<li><a href="IDW89.jpg">Creativity Of Ditko</a> (2012)
+<li><a href="../CrowPestilence/CrowPestilence.html">Crow: Pestilence</a> (2014)
 <li><a href="IDW90.jpg">Crysis</a> (2011)
 <li><a href="IDW91.jpg">CSI: Crime Scene Investigation</a> (2003)
 <li><a href="IDW92.jpg">CVO: Covert Vampire Operations</a> (2003)
